src/main/scala/SensibleTyping/output/RunGenerics3.output
(fragment of Generics3.scala):11: error: type mismatch;
 found   : java.util.ArrayList[Int]
 required: java.util.ArrayList[Any]
list2 = list1 // Compilation Error
         ^
one error found
!!!
discarding <script preamble>
